# app.js
@@ -16,6 +16,8 @@ var changeDataWork = require('./routes/works');
 var deleteDataWork = require('./routes/works');
 var addWork = require('./routes/works');
 var callBack = require('./routes/callback');
+var getCallBack = require('./routes/callback');
+var selectCallBack = require('./routes/callback');
 var clientByEmail = require('./routes/client');
 var register = require('./routes/register');
 var auth = require('./routes/auth');
@@ -29,7 +31,6 @@ var getCarByIdClient = require('./routes/cars');
 var getCarByIdCar = require('./routes/cars');
 var changeDataCar = require('./routes/cars');
 var deleteDataCar = require('./routes/cars');
-var getCallBack = require('./routes/callback');
 var addEntry = require('./routes/entry');
 var getEntryNoAuth = require('./routes/entryNoAuth');
 var getEntry = require('./routes/entry');
@@ -74,6 +75,7 @@ app.use('/works/change', changeDataWork);
 app.use('/works/delete', deleteDataWork);
 app.use('/callback', callBack);
 app.use('/callback/get', getCallBack);
+app.use('/callback/change', selectCallBack);
 app.use('/register', register);
 app.use('/auth', auth);
 app.use('/entry_no_auth', entryNoAuth);
